fix alignment

--- a/sass/_schedule.scss
+++ b/sass/_schedule.scss
@@ -265,6 +265,7 @@
           gap: 50px;
         }
         align-items: center;
+        justify-content: flex-start;
         width: 100%;
       
         .photo,
